[tool.poetry]
name = "chat-evolution-backend"
version = "0.1.0"
description = ""
authors = ["cyber-evolution"]
license = "GPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
sqlmodel = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
